# autoCG

./: .gitignore  generate.py  pyproject.toml
Calculator/: orca.py
src/autocg/: chem.py  generate.py
src/autocg/Calculator/: gaussian.py  orca.py  rdFF.py  template.py
src/autocg/stereochemistry/: chiral.py
src/autocg/utils/: arranger.py  conformation.py  frag.py  ic.py  make_smiles.py  process.py  stereo.py
